--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "Testing the possibilities of using NCF devices.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "browser-sync start --server --files '**/*.css, **/*.js, **/*.html'"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/crs1138/ncf-test.git"
-  },
+  "repository": "git+ssh://git@github.com/crs1138/ncf-test.git",
   "keywords": [
     "NCF",
     "test"
@@ -19,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/crs1138/ncf-test/issues"
   },
-  "homepage": "https://github.com/crs1138/ncf-test#readme"
+  "homepage": "https://github.com/crs1138/ncf-test#readme",
+  "devDependencies": {
+    "browser-sync": "^2.26.13"
+  }
 }
