--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "ncf-test",
+  "name": "nfc-test",
   "version": "0.1.0",
-  "description": "Testing the possibilities of using NCF devices.",
-  "main": "index.js",
+  "description": "Testing the possibilities of using NFC devices.",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "browser-sync start --server --files '**/*.css, **/*.js, **/*.html' --https",
-    "start:xip": "browser-sync -w --https"
+    "start": "browser-sync -w --https"
   },
-  "repository": "git+ssh://git@github.com/crs1138/ncf-test.git",
+  "repository": "git+ssh://git@github.com/crs1138/nfc-test.git",
   "keywords": [
-    "NCF",
+    "NFC",
     "test"
   ],
   "author": "Jan Pozivil <crs1138@me.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/crs1138/ncf-test/issues"
+    "url": "https://github.com/crs1138/nfc-test/issues"
   },
-  "homepage": "https://github.com/crs1138/ncf-test#readme",
+  "homepage": "https://github.com/crs1138/nfc-test#readme",
   "devDependencies": {
     "browser-sync": "^2.26.13"
   }
